@@ -1,5 +1,5 @@
 DIST magus-1.3.1.tar.bz2 7358580 RMD160 2a99db268e2d8802b948b1c88c57c53cfb1a5daf SHA1 36b7e33c37ece6482bb141b564c66dc83f6087c9 SHA256 f7f118dff53b53a45d612d870bc2c9fb151d9c3aeea6f006b74fc6ab41dcb4d6
-EBUILD magus-1.3.1.ebuild 4805 RMD160 47750af656b3ccc32ee9079c96db08ca937e43e7 SHA1 5e96cec508892166baaed4b3943bffc648a6d549 SHA256 58ba59c04c691d96f1a65cbe32df9fc7c7ab7950836ac41e95481adc251fff41
-EBUILD magus-99999999.ebuild 4805 RMD160 47750af656b3ccc32ee9079c96db08ca937e43e7 SHA1 5e96cec508892166baaed4b3943bffc648a6d549 SHA256 58ba59c04c691d96f1a65cbe32df9fc7c7ab7950836ac41e95481adc251fff41
-MISC ChangeLog 3210 RMD160 2c7e41a151b5b06e815b2fdba5199f9035c25dc4 SHA1 acf244a29a3140dab52d001a4f9392278b33881a SHA256 3bb15e8b40f958924e23789206b2ab54792363ded2ebe812b5ed97d9b9af352f
-MISC metadata.xml 740 RMD160 bccd3d44204e485633af464079e10830e43e6a1a SHA1 ebe28578b6af419e8a7c3e9f273b112374c21f9c SHA256 79bb6a5c6e33571bdd8309409b22aab6fb52004dbf4bc37ab0910bbcf8099654
+EBUILD magus-1.3.1.ebuild 4806 RMD160 023f47ae4b8779249270c1390df9131406c954be SHA1 c7b36d8e2af370e456e02bc83dcaeab058b700f1 SHA256 a5c47c657e2bebb9d5c720dbe0b8b7a4bbe7ee52af186e8bfec87153debc983f
+EBUILD magus-99999999.ebuild 4806 RMD160 023f47ae4b8779249270c1390df9131406c954be SHA1 c7b36d8e2af370e456e02bc83dcaeab058b700f1 SHA256 a5c47c657e2bebb9d5c720dbe0b8b7a4bbe7ee52af186e8bfec87153debc983f
+MISC ChangeLog 3399 RMD160 9d3eec1a98fbe92a07d2b0f73c89e817b8360c6e SHA1 c6631f8afe73491fbab8fbdf70f4d0667292b85a SHA256 6668410211f8dd4e41b1a5e794222103bd8af21226ce8fae13206e1a37042bca
+MISC metadata.xml 764 RMD160 1ad76763bf7957a7670d2687db95aee30cc31d3a SHA1 d88e606be5c43297666ed67cdd9a50bee3cc5ae7 SHA256 abda9737ebb13a3ee0438f2ab02f00623298c2a5c85d143199c7c1b5c80bb797
