@@ -7,10 +7,11 @@
 	<name>Martin Väth</name>
 </maintainer>
 <use>
+	<flag name="acroread">Depend on acroread (otherwise you are responsible to install/configure a pdf viewer)</flag>
+	<flag name="firefox">Depend on firefox browser (without a browser useflag you are responsible to install and configure a browser)</flag>
+	<flag name="icecat">Depend on icecat browser</flag>
+	<flag name="konqueror">Depend on konqueror browser</flag>
 	<flag name="postgres">Use postgresql instead of sqlite</flag>
-	<flag name="seamonkey">Depend on seamonkey (without seamonkey/firefox/kde you are responsible to install/configure a browser)</flag>
-	<flag name="firefox">Depend on firefox; this overrides seamonkey</flag>
-	<flag name="kde">Depend on konqueror; this overrides seamonkey and firefox</flag>
-	<flag name="pdf">Depend on acroread (otherwise you are responsible to install/configure a pdf viewer)</flag>
+	<flag name="seamonkey">Depend on seamonkey browser</flag>
 </use>
 </pkgmetadata>
