@@ -4,6 +4,11 @@
 
 *magus-1.3.1 (10 Mar 2010)
 
+  25 Jul 2010; Martin Väth <martin@mvath.de> :
+  mozilla-firefox->firefox.
+  USE flags: Add icecat, rename kde->konqueror, pdf->acroread.
+  Let firefox take precedence.
+
   31 Mar 2010; Martin Väth <martin@mvath.de> :
   +magus-1.3.1.ebuild +magus-99999999.ebuild -magus-live-1.3.1-r6.ebuild:
   Rename magus-live into magus: Since now some tarball is available and the
